minor troubleshooting fixes for orm and model queries

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eat Da Burger!</title>
     <!-- local stylesheet -->
-    <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+    <link rel="stylesheet" href="./public/assets/css/burger_style.css" type="text/css" />
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="/assets/images/burger.png" />
+    <link rel="icon" type="image/png" href="./public/assets/img/burger.png" />
     <!-- bootstrap library -->
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
     <!-- google fonts -->
@@ -15,7 +15,7 @@
     <!-- jQuery library -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- local script -->
-    <script src="/assets/js/script.js"></script>
+    <script src="./public/assets/js/script.js"></script>
 </head>
 	<body>
 		{{{ body }}}
