--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <img src="/assets/images/burger.png" />
+            <img src="./public/assets/img/burger.png" />
             <h1>Eat Da Burger!</h1>
         </div>
     </div>
