--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,37 +1,37 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-12">
-            <img src="./public/assets/img/burger.png" />
-            <h1>Eat Da Burger!</h1>
+        <div class="col-sm-6 text-center mx-auto">
+            <img class="burger-img" src="/assets/img/burger.png" alt="A vector icon of a burger" />
+            <h1 class="title">Eat Da Burger!</h1>
+            <input type="text" id="input" placeholder="Enter a burger you want to eat..." />
+            <button type="submit" id="submit" class="button submit">Submit</button> 
         </div>
     </div>
 </div>
-<div class="container">
+
+<div class="container mt-3">
     <div class="row">
         <!-- list of burgers to eat -->
-        <div class="col-sm-4">
-            <ul>
-                {{#each burger}}
+        <div class="col-sm-6">
+            <h2 class="sub-title sub-title-eat mx-auto">Burgers to Eat</h2>
+            <div>
+                {{#each burgers}}
                     {{#unless devoured}}
                         {{> burger-list devoured=false}}
                     {{/unless}}
                 {{/each}}
-            </ul>
-        </div>
-        <!-- input area -->
-        <div class="col-sm-4">
-            <input type="text" id="input" placeholder="Enter a burger you want to eat..." />
-            <button type="submit" id="submit" class="btn btn-primary round">Submit</button> 
+            </div>
         </div>
         <!-- list of burgers that have been eaten -->
-        <div class="col-sm-4">
-            <ul>
-                {{#each cats}}
+        <div class="col-sm-6">
+            <h2 class="sub-title sub-title-ate mx-auto">Burgers I Ate</h2>
+            <div>
+                {{#each burgers}}
                     {{#if devoured}}
                         {{> burger-list devoured=true}}
                     {{/if}}
                 {{/each}}
-            </ul>
+            </div>
         </div>
     </div>
 </div>
