--- a/views/partials/burger-list.handlebars
+++ b/views/partials/burger-list.handlebars
@@ -1,4 +1,15 @@
-<li>
-	{{name}}
-	<button class="devour" data-id="{{id}}">Devour it!</button>
-</li>
+{{#if devoured}}
+
+<div class="row">
+    <p class="item ate mx-auto">{{burger_name}}</p>
+	<button class="button delete mx-auto" data-id={{id}}>Delete!</button>
+</div>
+
+{{else}}
+
+<div class="row">
+    <p class="item eat mx-auto">{{burger_name}}</p>
+	<button class="button devour mx-auto" data-id={{id}}>Devour!</button>
+</div>
+
+{{/if}}
