updated submit event to work with enter key

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,10 @@
         <div class="col-sm-6 text-center mx-auto">
             <img class="burger-img" src="/assets/img/burger.png" alt="A vector icon of a burger" />
             <h1 class="title">Eat Da Burger!</h1>
-            <input type="text" id="input" placeholder="Enter a burger you want to eat..." />
-            <button type="submit" id="submit" class="button submit">Submit</button> 
+            <form id="form">
+                <input type="text" id="input" placeholder="Enter a burger you want to eat..." />
+                <button type="submit" id="submit" class="button submit">Submit</button> 
+            </form>
         </div>
     </div>
 </div>
